// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalNav matches snapshot 1`] = `
<DocumentFragment>
  <header
    class="global-nav"
  >
    <div
      class="container"
    >
      <div
        class="brandName"
      >
        <a
          href="/"
        >
          sZ Shop
        </a>
      </div>
      <nav
        class="navbar"
      >
        <ul>
          <li>
            <a
              aria-current="page"
              class="active"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class=""
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              class=""
              href="/cart"
            >
              <img
                alt="cart"
                src="cart.svg"
              />
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </header>
  <footer
    class="footer"
  >
    <div>
      <span>
        Made with 
        <img
          alt="heart"
          src="heart.svg"
        />
         by  
        <a
          href="https://github.com/szmazhr"
          rel="noreferrer"
          target="_blank"
        >
          Shahzar Mazhar
        </a>
      </span>
    </div>
    <div
      class="repo_link"
    >
      <a
        href="https://github.com/szmazhr/shopping-cart"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="github"
          src="github.svg"
          width="30"
        />
      </a>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`GlobalNav matches snapshot with count 1`] = `
<DocumentFragment>
  <header
    class="global-nav"
  >
    <div
      class="container"
    >
      <div
        class="brandName"
      >
        <a
          href="/"
        >
          sZ Shop
        </a>
      </div>
      <nav
        class="navbar"
      >
        <ul>
          <li>
            <a
              aria-current="page"
              class="active"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              class=""
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              class=""
              href="/cart"
            >
              <img
                alt="cart"
                src="cart.svg"
              />
            </a>
            <span
              class="cart-count"
            >
              5
            </span>
          </li>
        </ul>
      </nav>
    </div>
  </header>
  <footer
    class="footer"
  >
    <div>
      <span>
        Made with 
        <img
          alt="heart"
          src="heart.svg"
        />
         by  
        <a
          href="https://github.com/szmazhr"
          rel="noreferrer"
          target="_blank"
        >
          Shahzar Mazhar
        </a>
      </span>
    </div>
    <div
      class="repo_link"
    >
      <a
        href="https://github.com/szmazhr/shopping-cart"
        rel="noreferrer"
        target="_blank"
      >
        <img
          alt="github"
          src="github.svg"
          width="30"
        />
      </a>
    </div>
  </footer>
</DocumentFragment>
`;
